--- a/index.html
+++ b/index.html
@@ -113,17 +113,17 @@
                     <div class="card-header text-center h4">Register Now</div>
                     <div class="card-body">
                         <div class="input-group">
-                            <input type="text" class="form-control">
+                            <input type="text" placeholder="Name" class="form-control">
                         </div>
                         <div class="d-flex mt-3">
-                            <input type="text" name="" class="form-control" style="margin-right: 10px" id="">
-                            <input type="text" name="" class="form-control" id="">
+                            <input type="email" placeholder="Email" name="" class="form-control" style="margin-right: 10px" id="">
+                            <input type="tel" name="" placeholder="Phone" class="form-control" id="">
                         </div>
                         <div class="input-group mt-3">
-                            <input type="text" class="form-control">
+                            <input type="text" placeholder="Subject" class="form-control">
                         </div>
                         <div class="input-group mt-3">
-                            <textarea class="form-control" style="resize: none;" name="" id="" rows="3"></textarea>
+                            <textarea class="form-control" placeholder="Message" style="resize: none;" name="" id="" rows="3"></textarea>
                         </div>
                         <button type="submit" class=" mt-3 btn btn-primary">Send</button>
                     </div>
@@ -194,9 +194,8 @@
                 <div class="card-1 mr-4">
                     <div class="card" style="width: 16rem;">
                         <img src="img/IMAGE CURSO 1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Design for the web with adobe photoshop</p>
+                        <div class="card-body text-center">
+                            <p class="card-text h6 mb-3">Design for the web with adobe photoshop</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -204,9 +203,8 @@
                 <div class="card-2 mr-4">
                     <div class="card" style="width: 16rem;">
                         <img src="img/IMAGE CURSO 1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Design for the web with adobe photoshop</p>
+                        <div class="card-body text-center">
+                            <p class="card-text h6 mb-3">Design for the web with adobe photoshop</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -214,9 +212,8 @@
                 <div class="card-3 mr-4">
                     <div class="card" style="width: 16rem;">
                         <img src="img/IMAGE CURSO 1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Design for the web with adobe photoshop</p>
+                        <div class="card-body text-center">
+                            <p class="card-text h6 mb-3">Design for the web with adobe photoshop</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -224,9 +221,8 @@
                 <div class="card-4 mr-4">
                     <div class="card" style="width: 16rem;">
                         <img src="img/IMAGE CURSO 1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Design for the web with adobe photoshop</p>
+                        <div class="card-body text-center">
+                            <p class="card-text h6 mb-3">Design for the web with adobe photoshop</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -271,37 +267,37 @@
     <section class="icons" style="min-height: 280px;">
         <div class="icons-content container">
             <div class="icon-box-1 m-auto">
-                <div class="icon-image">
+                <div class="icon-image m-auto">
                     <img src=" img/ICONO 1.png" class="img-fluid" alt="">
                 </div>
                 <div class="icon-text">
-                    <p class="h5 text-white ml-2 mt-3">Excellent <span style="display: block;">Content</span></p>
+                    <p class="h5 text-white text-center ml-2 mt-3">Excellent <span style="display: block;">Content</span></p>
                 </div>
             </div>
             <div class="icon-box-2 m-auto">
-                <div class="icon-image"">
+                <div class="icon-image m-auto">
                     <img src=" img/ICONO 2.png" class="img-fluid" alt="">
                 </div>
                 <div class="icon-text">
-                    <p class="h5 text-white ml-2 mt-3">Excellent <span style="display: block;">Content</span></p>
+                    <p class="h5 text-white text-center ml-2 mt-3">Experts <span style="display: block;">Instructor</span></p>
 
                 </div>
             </div>
             <div class="icon-box-3 m-auto">
-                <div class="icon-image"">
+                <div class="icon-image m-auto">
                     <img src=" img/ICONO 3.png" class="img-fluid" alt="">
                 </div>
                 <div class="icon-text">
-                    <p class="h5 text-white ml-2 mt-3">Excellent <span style="display: block;">Content</span></p>
+                    <p class="h5 text-white text-center ml-2 mt-3 text-center">The Best<span style="display: block;">Professionals</span></p>
 
                 </div>
             </div>
             <div class="icon-box-4 m-auto">
-                <div class="icon-image"">
+                <div class="icon-image m-auto">
                     <img src=" img/ICONO 4.png" class="img-fluid" alt="">
                 </div>
                 <div class="icon-text">
-                    <p class="h5 text-white ml-2 mt-3">Excellent <span style="display: block;">Content</span></p>
+                    <p class="h5 text-white text-center ml-2 mt-3">Countless<span style="display: block;">Courses</span></p>
 
                 </div>
             </div>
@@ -384,8 +380,8 @@
                                     <img src="/img/person_1.jpg" alt="" srcset="">
                                 </div>
                                 <h5 class="card-title">John Smith</h5>
-                                <p class="card-text" style="position: relative; top: -18px;">Math Teacher</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text text-yellow" style="position: relative; top: -18px;">Math Teacher</p>
+                                <a href="#" class="btn btn-outline-warning" style="border-radius: 20px;">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -397,8 +393,8 @@
                                     <img src="/img/person_2.jpg" alt="" srcset="">
                                 </div>
                                 <h5 class="card-title">John Smith</h5>
-                                <p class="card-text" style="position: relative; top: -18px;">Math Teacher</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text text-yellow" style="position: relative; top: -18px;">Math Teacher</p>
+                                <a href="#" class="btn btn-outline-warning" style="border-radius: 20px;">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -410,8 +406,8 @@
                                     <img src="/img/person_3.jpg" alt="" srcset="">
                                 </div>
                                 <h5 class="card-title">John Smith</h5>
-                                <p class="card-text" style="position: relative; top: -18px;">Math Teacher</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text text-yellow" style="position: relative; top: -18px;">Math Teacher</p>
+                                <a href="#" class="btn btn-outline-warning" style="border-radius: 20px;">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -423,8 +419,8 @@
                                     <img src="/img/person_5.jpg" alt="" srcset="">
                                 </div>
                                 <h5 class="card-title">John Smith</h5>
-                                <p class="card-text" style="position: relative; top: -18px;">Math Teacher</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text text-yellow" style="position: relative; top: -18px;">Math Teacher</p>
+                                <a href="#" class="btn btn-outline-warning" style="border-radius: 20px;">Read More</a>
                             </div>
                         </div>
                     </div>
