--- a/index.html
+++ b/index.html
@@ -321,31 +321,31 @@
                         style="position: absolute; bottom: 20%; left: 10%;">Explorar</a>
                 </div>
                 <div class="study-card-2 study-img">
-                    <p class="h4 text-white" style="position: absolute; bottom: 30%; left: 10%;">Administración</p>
+                    <p class="h4 text-white" style="position: absolute; bottom: 30%; left: 10%;">Accounting</p>
                     <a href="#" class="btn btn-warning btn-small text-white"
                         style="position: absolute; bottom: 20%; left: 10%;">Explorar</a>
                     <!-- <img src="img/IMAGE  CATEGORY ACCOUNTING.jpg" class="img-fluid"> -->
                 </div>
                 <div class="study-card-3 study-img">
-                    <p class="h4 text-white" style="position: absolute; bottom: 40%; left: 10%;">Administración</p>
+                    <p class="h4 text-white" style="position: absolute; bottom: 40%; left: 10%;">Mathematics</p>
                     <a href="#" class="btn btn-warning btn-small text-white"
                         style="position: absolute; bottom: 20%; left: 10%;">Explorar</a>
                     <!-- <img src="img/IMAGE  CATEGORY MATHEMATICS.jpg" class="img-fluid" alt=""> -->
                 </div>
                 <div class="study-card-4 study-img">
-                    <p class="h4 text-white" style="position: absolute; bottom: 40%; left: 10%;">Administración</p>
+                    <p class="h4 text-white" style="position: absolute; bottom: 40%; left: 10%;">Programming</p>
                     <a href="#" class="btn btn-warning btn-small text-white"
                         style="position: absolute; bottom: 20%; left: 10%;">Explorar</a>
                     <!-- <img src="img/IMAGE  CATEGORY PROGRAMMING.jpg" class="img-fluid" alt=""> -->
                 </div>
                 <div class="study-card-5 study-img">
-                    <p class="h4 text-white" style="position: absolute; bottom: 40%; left: 10%;">Administración</p>
+                    <p class="h4 text-white" style="position: absolute; bottom: 40%; left: 10%;">Architecture</p>
                     <a href="#" class="btn btn-warning btn-small text-white"
                         style="position: absolute; bottom: 20%; left: 10%;">Explorar</a>
                     <!-- <img src="img/IMAGE  CATEGORY ARCHITECTURE.jpg" class="img-fluid" alt=""> -->
                 </div>
                 <div class="study-card-6 study-img"">
-                    <p class=" h4 text-white" style="position: absolute; bottom: 40%; left: 10%;">Administración</p>
+                    <p class=" h4 text-white" style="position: absolute; bottom: 40%; left: 10%;">Biology</p>
                     <a href="#" class="btn btn-warning btn-small text-white"
                         style="position: absolute; bottom: 20%; left: 10%;">Explorar</a>
                     <!-- <img src="img/IMAGE  CATEGORY BIOLOGY.jpg" class="img-fluid" alt=""> -->
