--- a/index.html
+++ b/index.html
@@ -138,25 +138,8 @@
     <!-- ##### Hero Area Start ##### -->
     <section class="hero-area" style="position: relative; min-height:500px">
         <div class="hero-slideshow owl-carousel">
-
             <!-- Single Slide -->
-            <div class="single-slide">
-                <!-- Background Image-->
-                <div class="slide-bg-img bg-img" style="background-image:url(./img/IMAGEN\ HERO.jpg);"></div>
-                <!-- Welcome Text -->
-                <!-- <div class="container h-100">
-                        <div class="row h-100 align-items-center">
-                            <div class="col-12 col-lg-9">
-                                <div class="welcome-text">
-                                    <h2 data-animation="fadeInUp" data-delay="300ms"><span class="lang" key="agencia">Agencia Creativa</span><br>2021</h2>
-                                    <h4 data-animation="fadeInUp" data-delay="500ms" class="lang" key="creatividad">Creatividad que <span>se ve</span></h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-            </div>
-            <!-- Single Slide -->
-            <div class="single-slide single-slide-video">
+            <div class="single-slide-video">
                 <!-- Background Image-->
                 <div class="slide-bg-img slide-2 bg-img""></div>
                 <!-- Welcome Text -->
@@ -486,7 +469,7 @@
                         <!-- Single Footer Widget -->
                         <div class="col-sm-4">
                             <div class="single-footer-widget mb-100">
-                                <h5 class="widget-title" key="dir">Quick Links</h5>
+                                <h5 class="widget-title text-warning" key="dir">Quick Links</h5>
                                 <ul>
                                     <li class="mt-4 text-white"><a href="#" class="text-white">About Us</a></li>
                                     <li class="mt-4 text-white"><a href="#" class="text-white">Courses</a></li>
@@ -499,7 +482,7 @@
                         <!-- Single Footer Widget -->
                         <div class="col-sm-4">
                             <div class="single-footer-widget mb-100 mr-3">
-                                <h5 class="widget-title lang">Contact Info</h5>
+                                <h5 class="widget-title text-warning lang">Contact Info</h5>
                                 <ul>
                                     <li class="mt-4 text-white"><i></i>123 456 789</li>
                                     <li class="mt-4 text-white"><i></i>info@gmail.com</li>
@@ -516,8 +499,9 @@
                         <!-- Single Footer Widget -->
                         <div class="col-sm-4">
                             <div class="single-footer-widget mb-100 mr-3">
-                                <h5 class="widget-title lang" key="nuestrasRedes">newsLetter</h5>
-                                <div class="input-group mb-3">
+                                <h5 class="widget-title text-warning">newsLetter</h5>
+                                <p class="mb-3 newsletter-text"  style="position: relative; top:-10px;">Recieve all our promotions <br> and notifications</p>
+                                <div class="input-group mb-3"  style="position: relative; top: -10px;">
                                     <input type="text" class="form-control" placeholder="Subscribe"
                                         aria-label="Recipient's username" aria-describedby="button-addon2">
                                     <div class="input-group-append">
